--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.5
   giffy_dialog: ^2.0.0+2
   speed_dial_fab: ^2.3.0
+  uuid: ^4.1.0
 
 dev_dependencies:
   flutter_test:
