--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/images/murder03.jfif
     - assets/images/join_game.jfif
     - assets/images/homepage2.jpg
+    - assets/images/vote2.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
