--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - assets/images/homepage2.jpg
     - assets/images/vote2.jpg
     - assets/images/night_state.jpg
+    - assets/images/death.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
