--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   uuid: ^4.1.0
   auto_size_text: ^3.0.0
   text_scroll: ^0.2.0
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
